@@ -1,11 +1,12 @@
 package com.culqi.util.validation;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 public class RefundValidation {
     public static void create(Map<String, Object> data) throws Exception {
         Helper.validateStringStart((String) data.get("charge_id"), "chr");
-        List<String> allowedReasonValues = List.of("duplicado", "fraudulento", "solicitud_comprador");
+        List<String> allowedReasonValues = Arrays.asList("duplicado", "fraudulento", "solicitud_comprador");
         Helper.validateValue((String) data.get("reason"), allowedReasonValues);
         Object amountObj = data.get("amount");
         Helper.validateAmountValue(amountObj);
@@ -13,7 +14,7 @@ public class RefundValidation {
 
     public static void list(Map<String, Object> data) throws Exception {
         if (data.containsKey("reason")) {
-            List<String> allowedReasonValues = List.of("duplicado", "fraudulento", "solicitud_comprador");
+            List<String> allowedReasonValues = Arrays.asList("duplicado", "fraudulento", "solicitud_comprador");
             Helper.validateValue((String) data.get("reason"), allowedReasonValues);
         }
 
