@@ -4,6 +4,7 @@ import java.util.regex.Matcher;
 import java.time.YearMonth;
 import java.time.format.DateTimeFormatter;
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -61,17 +62,17 @@ public class TokenValidation {
 
     public static void list(Map<String, Object> data) throws Exception {
         if (data.containsKey("device_type")) {
-            List<String> allowedDeviceValues = List.of("desktop", "mobile", "tablet");
+            List<String> allowedDeviceValues = Arrays.asList("desktop", "mobile", "tablet");
             Helper.validateValue((String) data.get("device_type"), allowedDeviceValues);
         }
 
         if (data.containsKey("card_brand")) {
-            List<String> allowedBrandValues = List.of("Visa", "Mastercard", "Amex", "Diners");
+            List<String> allowedBrandValues = Arrays.asList("Visa", "Mastercard", "Amex", "Diners");
             Helper.validateValue((String) data.get("card_brand"), allowedBrandValues);
         }
 
         if (data.containsKey("card_type")) {
-            List<String> allowedCardTypeValues = List.of("credito", "debito", "internacional");
+            List<String> allowedCardTypeValues = Arrays.asList("credito", "debito", "internacional");
             Helper.validateValue((String) data.get("card_type"), allowedCardTypeValues);
         }
 
